--- a/Sesion 22/CSS/keyframe.css
+++ b/Sesion 22/CSS/keyframe.css
@@ -1,16 +1,20 @@
 body{
     overflow: hidden;
 }
-p{
+p {
     animation-duration: 3s;
-    animation-name: slideim;
+    animation-name: slidein;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
-@keyframes slideim {
-    from{
+
+@keyframes slidein {
+    from {
         margin-left: 100%;
         width: 300%;
     }
-    to{
+
+    to {
         margin-left: 0%;
         width: 100%;
     }
