--- a/Examen 2/css/productos.css
+++ b/Examen 2/css/productos.css
@@ -4,7 +4,7 @@
 }
 
 header {
-    background-color: #f6861d;
+    background-color: red;
     color: white;
     
     
@@ -12,7 +12,7 @@ header {
 
 
 nav{
-    background-color: #f6861d; 
+    background-color: black; 
     text-align: right;
 }
 
@@ -69,7 +69,353 @@ aside h2{
     float: right;
 }
 
-#titulo{
-    font-size: 9vw;
-    font-family: 'Times New Roman', Times, serif;
+
+
+#ubitxt{
+    position: relative;
+    left: 24px; 
+    border: 1px solid red;
+    border-radius: 20px;
 }
+
+
+#redestxt{
+    position: relative;
+    left: 24px; 
+    border: 1px solid red;
+    border-radius: 20px;
+}
+
+
+#mapatxt{
+    position: relative;
+    left: 24px; 
+    border: 1px solid red;
+    border-radius: 20px;
+}
+.mapa{
+    border-radius: 10px;
+}
+#facebtn{
+    border: 1px solid red;
+    position: relative;
+    left: 15px;
+}
+#igbtn{
+    border: 1px solid red;
+    position: relative;
+    left: 20px;
+}
+#twbtn{
+    border: 1px solid red;
+    position: relative;
+    left: 25px;
+}
+#ggbtn{
+    border: 1px solid red;
+    position: relative;
+    left: 30px;
+}
+.logoprincipal{
+  position: relative;
+  left: 150px;
+  top: 10px;
+}
+#carouselExampleControls{
+    position: relative;
+    top: -10px;
+
+}
+
+#barra{
+  position: relative;
+  right: 220px;
+  top: 90px;
+  width: 600px;
+
+}
+
+#botonbarra{
+  position: relative;
+  right: 120px;
+  top: 54px;    
+  border: 1px solid black;
+   color: black;
+   z-index: 3;
+}
+
+
+#form{
+    position: relative;
+    left: 400px;
+    width: 100px;
+}
+#botoncarrito{
+  position: relative;
+  right: 20px;
+  top: -35px;
+  border-radius: 40px;
+}
+#botonuser{
+    position: relative;
+    top: -35px;
+}
+
+
+
+/* ULTIMO AGREGADO */
+
+
+
+.inner{
+    overflow: hidden;
+}
+
+.inner img{
+    transition: all 1.5s ease;
+    border-radius: 10px;
+        
+}
+
+.inner:hover img{
+    transform: scale(1.5);
+}
+
+#taladro{
+  position: relative;
+  left: 20px;
+  top: 20px;
+  border-radius: 10px;
+  height: 260px;
+  
+}
+
+#escalera{
+    position: relative;
+    left: 400px;
+    top: -235px;	
+    border-radius: 10px;
+    height: 260px;
+
+}
+
+#cables{
+    position: relative;
+    left: 800px;
+    top: -495px;
+    border-radius: 10px;
+    height: 260px;
+
+}
+
+#bombas{
+    position: relative;
+    top: -400px;
+    left: 20px;
+    border-radius: 10px;
+    height: 260px;
+
+}
+
+#ceramicos{
+    position: relative;
+    left: 400px;
+    top: -660px;
+    border-radius: 10px;
+    height: 260px;
+
+}
+
+#pintura{
+    position: relative;
+    left: 800px;
+    top: -920px;
+    border-radius: 10px;
+    height: 260px;
+
+}
+.masvendido{
+    position: relative;
+    top: -900px;
+}
+
+#pie{
+    position: relative;
+    top: -650px;
+}
+.cards{
+  position: relative;
+  top: 100px;
+  left: 40px;
+}
+/* PROFILE */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    font-family: "Roboto", sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .profile-menu {
+    position: fixed;
+    top: 25px;
+    right: 30px;
+  }
+  
+  .profile-menu .action {
+    display: block;
+    width: 54px;
+    height: 54px;
+    background-color: #000000;
+    border-radius: 50%;
+    overflow: hidden;
+    cursor: pointer;
+  }
+  
+  .profile-menu .action img {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .profile-menu .menu {
+    width: 310px;
+    padding: 30px;
+    background-color: #000000;
+    border-radius: 10px;
+    position: absolute;
+    top: 75px;
+    right: 0px;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s;
+  }
+  
+  .profile-menu .menu.active {
+    opacity: 1;
+    visibility: visible;
+  }
+  
+  .profile-menu .menu::before {
+    content: "";
+    width: 16px;
+    height: 16px;
+    background-color: #000000;
+    border-top-left-radius: 3px;
+    position: absolute;
+    top: -8px;
+    right: 19px;
+    transform: rotate(45deg);
+  }
+  
+  .profile-menu .menu .profile {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+  
+  .profile-menu .menu .profile img {
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
+    user-select: none;
+  }
+  
+  .profile-menu .menu .profile .info {
+    margin-left: 15px;
+  }
+  
+  .profile-menu .menu .profile .info h2 {
+    color: #dadada;
+    font-size: 18px;
+    font-weight: 400;
+    text-transform: capitalize;
+    margin-bottom: 4px;
+  }
+  
+  .profile-menu .menu .profile .info p {
+    color: #7d8193;
+    font-size: 16px;
+    font-weight: 400;
+  }
+  
+  .profile-menu .menu .btn {
+    width: 250px;
+    height: 53px;
+    color: #e5e5e5;
+    background-color: #241e1e;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: 400;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+    transition: all 0.3s;
+  }
+  
+  .profile-menu .menu .btn img {
+    width: 20px;
+    margin-right: 5px;
+    user-select: none;
+  }
+  
+  .profile-menu .menu .btn:hover {
+    background-color: #000000;
+  }
+  
+  .profile-menu .menu ul li {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  .profile-menu .menu ul li:last-child {
+    margin: 0;
+  }
+  
+  .profile-menu .menu ul li a {
+    color: #e5e5e5;
+    font-size: 16px;
+    font-weight: 400;
+    text-decoration: none;
+  }
+  
+  .profile-menu .menu ul li img {
+    width: 26px;
+    margin-right: 10px;
+    user-select: none;
+  }
+  .profile-menu{
+    z-index: 3;
+    position: relative;
+    top: -85px;
+    right: 100px;
+  }
+
+  @media  (max-width: 575px){
+
+  }
+
+
+  @media  (min-width: 576px) and (max-width:767px){
+
+  }
+
+  @media  (max-width: 768px) and (max-width: 991px){
+
+  }
+
+  @media  (max-width: 992px) {
+
+  }
